# HDA_with_Cpp

./: .gitignore  CHANGELOG.md  LICENSE  README.md  buildall.ps1  buildall.sh  config.json  contacts.csv  demo.db  index.html  meson.build  native.build  server_config.json  sqlite.txt  styles.css
src/: demo_web_server.cpp
src/controllers/contacts/: contacts.cpp  contacts.hpp
src/controllers/home/: home.cpp  home.hpp
src/database/: db_mgr.cpp  db_mgr.hpp
src/dtos/: contact_dto.cpp  contact_dto.hpp
src/models/: contact.hpp
src/server/: server_config.cpp  server_config.hpp
src/templates/: contact.csp  contact_edit.csp  contact_new.csp  contacts.csp
src/views/: contact.cc  contact.h  contact_edit.cc  contact_edit.h  contact_new.cc  contact_new.h  contacts.cc  contacts.h
test/: test_demo_web_server.cpp
